[package]
name = "mee6"
version = "0.0.1"
authors = ["martinjlowm <martin@martinjlowm.dk>"]
readme = "README.org"
license = "MIT OR Apache-2.0"
edition = "2018"

# [lib]
# name = "lib"
# path = "src/lib.rs"

[[bin]]
name = "mee6-slack-authorizer"
path = "src/entries/authorizer.rs"

# Modularize this
[[bin]]
name = "mee6-lunch"
path = "src/bin/lunch.rs"

[[bin]]
name = "mee6-scheduler"
path = "src/bin/scheduler.rs"

[profile.release]
# Less code to include into binary.
panic = 'abort'
# Optimization over all codebase (better optimization, slower build).
codegen-units = 1
# Optimization for size (more aggresive).
opt-level = 'z' # or 's' for a less aggressiv alternative.
# Link time optimization using using whole-program analysis.
lto = true

[dependencies]
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", rev = "c36409c5e65f994c7ff48510cd111905b4aa77c9"}
tokio = { version = "0.2.22", features = ["macros"] }
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"
rusoto_core = { version = "0.45.0", default_features = false, features=["rustls"] }
rusoto_credential = "0.45.0"
rusoto_sqs = { version = "0.45.0", default_features = false, features=["rustls"] }
rusoto_s3 = { version = "0.45.0", default_features = false, features=["rustls"] }
rusoto_dynamodb = { version = "0.45.0", default_features = false, features=["rustls"] }
dynomite = { version = "0.10.0", default_features = false, features = ["rustls"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
async-graphql = { version = "2.0", features = ["uuid"] }
lazy_static = "1.4.0"
maplit = "1.0.2"
chrono = "0.4.19"
aws_lambda_events = "^0.3.1"

[dev-dependencies]
pretty_assertions = "0.6.1"
once_cell = "1.4.1"